[package]
name = "sat"
version = "0.1.0"
authors = ["mxheller <heller.max1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixedbitset = "^0.2"

[dev-dependencies]
criterion = "^0.3"

[[bench]]
name = "dubois"
harness = false
[[bench]]
name = "bf0432-007"
harness = false
