[package]
name = "sat"
version = "0.1.0"
authors = ["mxheller <heller.max1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixedbitset = "^0.2"
ordered-float = "^1.0"
rand = "^0.7"

[dev-dependencies]
criterion = "^0.3"
quickcheck = "^0.9"
quickcheck_macros = "^0.9"

[profile.release]
lto = true

[profile.bench]
lto = true

[[bench]]
name = "dubois"
harness = false
[[bench]]
name = "bf0432-007"
harness = false
[[bench]]
name = "fpga"
harness = false
